--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,188 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+body {
+  font-family: "Montserrat", sans-serif;;
+}
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+#search-form {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  
+}
+
+#search-form input[type="text"] {
+  padding: 8px;
+  padding-left: 16px;
+  width: 272px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  margin-right: 10px;
   font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+#search-form input[type="text"]:focus {
+  outline: none;
+  border-color: #4e75ff;
+  background-color: transparent;
+}
+#search-form input[type="text"]:hover {
+  border-color: #000000;
+}
+#search-form button {
+  
+  border: none;
+  background-color: #4e75ff;
+  border-radius: 8px;
+padding: 8px 16px;
+width: 91px;
+height: 41px;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #fff;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+#search-form button:hover {
+  background-color: #6c8cff;
+}
+
+.loader {
+    font-family: "Montserrat", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+  font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #2e2f42;
+}
+
+.gallery {
+  display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 24px; 
+}
+
+.photo-card {
+    flex: 1 1 calc(33.333% - 24px); 
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  overflow: hidden;
+  background-color: white;
+  object-fit: cover;
+  height: 220px;
+  
+}
+
+.photo-card img {
+  width: 100%;
+  height: auto;
+ object-fit: cover;
+ max-height: 164px;
+  display: block;
+}
+
+.photo-card .info {
+  padding: 4px 0px;
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 32px;
+  justify-content: space-around;
+  background-color: #f8f8f8;
+  width: 100%;
+}
+
+b {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+ .info-item {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+color: #2e2f42;
+
+
+
+}
+.hidden {
+    display: none;
+}
+
+.loader {
+    margin: 0 auto ;
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      position: relative;
+      animation: rotate 1s linear infinite
+    }
+    .loader::before {
+      content: "";
+      box-sizing: border-box;
+      position: absolute;
+      inset: 0px;
+      border-radius: 50%;
+      border: 5px solid gray;
+      animation: prixClipFix 2s linear infinite ;
+    }
+
+    @keyframes rotate {
+      100%   {transform: rotate(360deg)}
+    }
+
+    @keyframes prixClipFix {
+        0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
+        25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
+        50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
+        75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
+        100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
+    }
+
+    .load-more{
+      margin: auto;
+      margin-top: 32px;
+      margin-bottom: 32px;
+      display: flex;
+align-items: center; 
+justify-content: center;
+flex-direction: row;
+gap: 10px;
+border-radius: 8px;
+padding: 8px 16px;
+width: 125px;
+height: 40px;
+border: none;
+background-color: #4e75ff;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #fff;
+font-family:  "Montserrat", sans-serif;
+    }
+
+.load-more:hover {
+  background-color: #6c8cff;
+}
+.hidden {
+    display: none;
 }
